...
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <string name="location_notification_title">Geofences enabled.</string>
    <string name="location_notification_text">We are requesting your location periodically.</string>
    <string name="location_lost_notification_title">Location lost.</string>
    <string name="location_lost_notification_text">Make sure you have enabled the GPS.</string>

...
